# gitzip

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml
scripts/: build_lzma_sdk_core.sh  test.sh
src/: gitignore.cpp  gitignore.h  main.cpp
